切割基本架構

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,6 @@
-<p-accordion>
-  <p-accordionTab header="Header 1">
-     Content 1
-  </p-accordionTab>
-  <p-accordionTab header="Header 2">
-      Content 2
-  </p-accordionTab>
-  <p-accordionTab header="Header 3">
-      Content 3
-  </p-accordionTab>
-</p-accordion>
-
+<nav><ul>
+  <li routerLink="/home">home</li>
+  <li routerLink="/orders">orders</li>
+  <li routerLink="/product">product</li>
+</ul></nav>
+<router-outlet></router-outlet>
