--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
-<nav><ul>
-  <li routerLink="/home">home</li>
-  <li routerLink="/orders">orders</li>
-  <li routerLink="/product">product</li>
-</ul></nav>
+<nav>
+  <ul>
+    <li routerLink="/home">home</li>
+    <li routerLink="/orders">orders</li>
+    <li routerLink="/product">product</li>
+  </ul>
+</nav>
 <router-outlet></router-outlet>
