--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <nav>
-  <ul>
-    <li routerLink="/home">home</li>
-    <li routerLink="/orders">orders</li>
-    <li routerLink="/product">product</li>
-  </ul>
+  <div>
+    <a routerLink="/home" class="nav-band">Shoptime</a>
+    <a routerLink="/home" (click)="navActive('home')" [ngClass]="{'active': isActive==='home'}">首頁</a>
+    <a routerLink="/orders" (click)="navActive('orders')" [ngClass]="{'active': isActive==='orders'}">訂單</a>
+    <a routerLink="/product" (click)="navActive('product')" [ngClass]="{'active': isActive==='product'}">產品</a>
+  </div>
 </nav>
 <router-outlet></router-outlet>
