--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,26 @@
-<p>
-  home works!
-</p>
+<div class="ui-g">
+  <div class="ui-g-4">
+    <p-card>
+      <p-header>
+        總收入
+      </p-header>
+      Body Content
+    </p-card>
+  </div>
+  <div class="ui-g-4">
+    <p-card>
+      <p-header>
+        總支出
+      </p-header>
+      Body Content
+    </p-card>
+  </div>
+  <div class="ui-g-4">
+    <p-card>
+      <p-header>
+        網路銷售額
+      </p-header>
+      Body Content
+    </p-card>
+  </div>
+</div>
