--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,6 @@
     <a routerLink="/product" (click)="navActive('product')" [ngClass]="{'active': isActive==='product'}">產品</a>
   </div>
 </nav>
-<router-outlet></router-outlet>
+<div class="layout">
+  <router-outlet></router-outlet>
+</div>
