--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -1,3 +1,33 @@
-<p>
-  orders works!
-</p>
+<p-table [value]="orderList" styleClass="order-table">
+    <ng-template pTemplate="header">
+      <tr>
+        <th *ngFor="let col of cols">
+          {{col.header}}
+        </th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-order>
+      <tr [ngClass]="{'paid': order.status===1,'unpaid': order.status===2,'shipping': order.status===3,'done': order.status===4}">
+        <td>{{order.customer}}</td>
+        <td>{{order.product}}</td>
+        <td>{{order.total}}</td>
+        <td>{{order.addTime | date:'yyyy/MM/dd HH:MM'}}</td>
+        <td>{{order.checkoutTime | date:'yyyy/MM/dd HH:MM'}}</td>
+        <td>{{order.address}}</td>
+        <td>
+            <p-splitButton [label]="processStatus(order.status)" (onDropdownClick)="clickIndex(order.index)" [model]="buttonItems" [styleClass]="processButton(order.status)"></p-splitButton>
+        </td>
+      </tr>
+    </ng-template>
+  </p-table>
+  <!-- customer
+product
+total
+addTime
+checkoutTime
+address
+status -->
+<!-- // 1:paid
+// 2:unpaid
+// 3:shipping
+// 4:done -->
