--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,16 +1,22 @@
-<p-table [value]="productList">
-    <ng-template pTemplate="header">
-        <tr>
-            <th *ngFor="let col of cols">
-                {{col.header}}
-            </th>
-        </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-car>
-        <tr>
-            <td *ngFor="let col of cols">
-                    {{car[col.field]}}
-            </td>
-        </tr>
-    </ng-template>
+<p-table [value]="productList" styleClass="product-table">
+  <ng-template pTemplate="header">
+    <tr>
+      <th *ngFor="let col of cols">
+        {{col.header}}
+      </th>
+    </tr>
+  </ng-template>
+  <ng-template pTemplate="body" let-product>
+    <tr>
+      <td>{{product.product}}</td>
+      <td>{{product.original}}</td>
+      <td>{{product.discount}}</td>
+      <td>{{product.size}}</td>
+      <td>{{product.color}}</td>
+      <td>{{product.inventory}}</td>
+      <td>
+          <button pButton type="button" [ngClass]="{'publish': product.status===1,'draft':product.status===0}" [label]="processStatus(product.status)" ></button>
+      </td>
+    </tr>
+  </ng-template>
 </p-table>
